Создание CSS файла
Подключила стили, шрифты.
Добавила изображения
Описала текстовые параметры

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
-    
-    
     <nav class="main-navigation">
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
@@ -22,29 +23,42 @@
     <h1 class="visually-hidden">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <section class="features">
       <h2 class="visually-hidden">Преимущества</h2>
-      <ol class="features-list">
-        <li class="feature-item">
+      <div class="advantages1">
+      <ol class="features-list1">
+        <li class="feature-item1">
           <h3>Настоящий городок</h3>
+          <span>№1</span>
           <p>Седона-не аттракцион для туристов,там течет своя жизнь</p>
+          <img src="img/feature-picture.jpg" width="800" height="256" alt="Настоящий городок. Седона-не аттракцион для туристов,там течет своя жизнь.>
         </li>
-        <li class="feature-item">
+        <li class="feature-item1">
           <h3>Там есть мост дьявола</h3>
+          <span>№2</span>
           <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
+          <img src="img/layer-5.jpg" width="800" height="256" alt="Там есть мост дьявола. Да, по нему можно пройтись! Если конечно вы осмелитесь.>
         </li>
-        <li class="feature-item">
-          <h3>Небольшая площадь</h3>
-          <p>Все достопримечательности находятся очень близко</p>
+        </ol>
+      </div>
+        <div class="advantages2">
+          <ol class="features-list2">
+            <li class="feature-item2">
+             <h3>Небольшая площадь</h3>
+             <span>№3</span>
+            <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="feature-item">
+        <li class="feature-item2">
           <h3>Красивая дорога</h3>
+          <span>№4</span>
           <p>Ехать в Седону из Лас-Вегаса совсем
             не скучно!</p>
           </li>
-          <li class="feature-item">
+          <li class="feature-item2">
             <h3>Мало туристов</h3>
+            <span>№5</span>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
+      </div>
       </section>
       <section class="services">
         <h2>Услуги</h2>
