Стилизовала кнопки подробнее и бронировать

--- a/catalog.html
+++ b/catalog.html
@@ -27,22 +27,30 @@
           <img src="img/index-amara.jpg" width="150" height="100" alt="amara">
           <p>Гостиница</p>
           <p>от 4000 р.</p>
-          <a>Подробнее</a>
-          <a>Забронировать</a>
+          <div class="more">
+            <a >Подробнее</a>
+          </div>
+          <div class="booking">
+            <a>Забронировать</a>
+          </div>
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <p>рейтинг: 8.3</p>
-        </li>
-        <li class="desert">
+          </li>
+          <li class="desert">
           <h2>DESERT QUAIL INN</h2>
           <img src="img/index-desert.jpg" width="150" height="100" alt="desert">
           <p>Мотель</p>
           <p>от 3000 р.</p>
+          <div class="more">
           <a>Подробнее</a>
+          </div>
+          <div class="booking">
           <a>Забронировать</a>
+          </div>
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
@@ -53,8 +61,12 @@
           <img src="img/index-villas.jpg" width="150" height="100" alt="villas">
           <p>Апартаменты</p>
           <p>от 2000 р.</p>
+          <div class="more">
           <a>Подробнее</a>
+          </div>
+          <div class="booking">
           <a>Забронировать</a>
+          </div>
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <p>рейтинг: 9.2</p>
