--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     </nav>
   </header>
   <main class="container">
-    <img src="img/intro-welcome.svg" width="550" height="350" alt="Welcome to the gorgeous Sedona Because the Grand Canyon sucks">
-    <h1 class="visually-hidden">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+    <div class="welcome">
+      <img src="img/intro-welcome.svg" width="550" height="350" alt="Welcome to the gorgeous Sedona Because the Grand Canyon sucks">
+    </div>
+    <h1 class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <section class="features">
       <h2 class="visually-hidden">Преимущества</h2>
       <div class="advantages1">
@@ -61,7 +63,7 @@
       </div>
       </section>
       <section class="services">
-        <h2>Услуги</h2>
+        <h2 class=".visually-hidden">Услуги</h2>
         <ul class="services-list">
           <li class="services-item">
             <h3>Жилье</h3>
@@ -96,7 +98,6 @@
               <input type="number" name="adults" id="adults" value="1" required>
               <label for="children">Дети:</label>
               <input type="number" name="children" id="children" value="0">
-              
               <button type="submit">Найти</button>
             </form>
           </div>
