--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
       <ol class="features-list1">
         <li class="feature-item1">
           <h3>Настоящий городок</h3>
-          <span>№1</span>
           <p>Седона-не аттракцион для туристов,там течет своя жизнь</p>
-          <img src="img/feature-picture.jpg" width="800" height="256" alt="Настоящий городок. Седона-не аттракцион для туристов,там течет своя жизнь.>
+          <img src="img/feature-picture.jpg" width="800" height="256" alt="Настоящий городок. Седона-не аттракцион для туристов,там течет своя жизнь.">
         </li>
         <li class="feature-item1">
           <h3>Там есть мост дьявола</h3>
-          <span>№2</span>
           <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
           <img src="img/layer-5.jpg" width="800" height="256" alt="Там есть мост дьявола. Да, по нему можно пройтись! Если конечно вы осмелитесь.>
         </li>
@@ -48,18 +46,15 @@
           <ol class="features-list2">
             <li class="feature-item2">
              <h3>Небольшая площадь</h3>
-             <span>№3</span>
             <p>Все достопримечательности находятся очень близко</p>
         </li>
         <li class="feature-item2">
           <h3>Красивая дорога</h3>
-          <span>№4</span>
           <p>Ехать в Седону из Лас-Вегаса совсем
             не скучно!</p>
           </li>
           <li class="feature-item2">
             <h3>Мало туристов</h3>
-            <span>№5</span>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
