--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
+  <header class="main-header container">
     <a class="main-header-logo" href="index.html">
       <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип Седона»">
     </a>
@@ -26,84 +26,92 @@
       <img src="img/intro-welcome.svg" width="459" height="353" alt="Welcome to the gorgeous Sedona Because the Grand Canyon sucks">
     </div>
     <h1 class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+    <div class="cause">
+    <span>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
+  </div>
     <section class="features">
       <h2 class="visually-hidden">Преимущества</h2>
-      <div class="advantages1">
-      <ol class="features-list1">
-        <li class="feature-item1">
-          <h3>Настоящий городок</h3>
+      <div>
+      <ol class="features-list">
+        <li class="feature-item-town">
+          <div class="real-town">
+            <h3>Настоящий городок</h3>
+          </div>
+          <div class="description">
           <p>Седона-не аттракцион для туристов,там течет своя жизнь</p>
           <img src="img/feature-picture.jpg" width="800" height="256" alt="Настоящий городок. Седона-не аттракцион для туристов,там течет своя жизнь.">
+          </div> 
         </li>
-        <li class="feature-item1">
+        <section class="services">
+          <h2 class="visually-hidden">Услуги</h2>
+          <ul class="services-list">
+            <li class="services-item">
+              <h3>Жилье</h3>
+              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="services-item">
+              <h3>Еда</h3>
+              <p>Всегда заказывайте фрменный бургер, вы не разочаруетсь!</p>
+            </li>
+            <li class="services-item">
+              <h3>Сувениры</h3>
+              <p>Не только китайского, но и местного прозводства!</p>
+            </li>
+          </ul>
+        </section>
+        <li class="feature-item-bridge">
           <h3>Там есть мост дьявола</h3>
           <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
           <img src="img/layer-5.jpg" width="800" height="256" alt="Там есть мост дьявола. Да, по нему можно пройтись! Если конечно вы осмелитесь.">
         </li>
-        </ol>
-      </div>
-        <div class="advantages2">
-          <ol class="features-list2">
-            <li class="feature-item2">
-             <h3>Небольшая площадь</h3>
+        <li class="feature-item-square">
+          <h3>Небольшая площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="feature-item2">
+        <li class="feature-item-road">
           <h3>Красивая дорога</h3>
           <p>Ехать в Седону из Лас-Вегаса совсем
             не скучно!</p>
           </li>
-          <li class="feature-item2">
+          <li class="feature-item-tourist">
             <h3>Мало туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-        </ol>
       </div>
       </section>
-      <section class="services">
-        <h2 class=".visually-hidden">Услуги</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3>Жилье</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="services-item">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте фрменный бургер, вы не разочаруетсь!</p>
-          </li>
-          <li class="services-item">
-            <h3>Сувениры</h3>
-            <p>Не только китайского, но и местного прозводства!</p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      </section>
-      <section class="search">
-        <div class="modal-form modal-search">
-          <div class="modal-search__header">
-            <button>Поиск гостиницы в Седоне</button>
-          </div>
-          <div class="modal-search__body">
-            <form action="https://echo.htmlacademy.ru/" method="POST">
-              <label for="checkin-date">Дата заезда:</label>
-              <input type="date" name="checkin-date" id="checkin-date" required>
+      <div class="index-columns">
+        <section class="interesting">
+          <h2>Заинтересовались?</h2>
+          <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        </section>
+        <section class="search">
+          <div class="modal-form modal-search">
+            <div class="modal-search__header">
+              <button class="search-button">Поиск гостиницы в Седоне</button>
+            </div>
+            <div class="modal-search__body">
+              <form action="https://echo.htmlacademy.ru/" method="POST">
+                <label for="checkin-date">Дата заезда:</label>
+                <input type="date" name="checkin-date" id="checkin-date" required>
+              </p>
               <label for="chekout-date">Дата выезда:</label>
               <input type="date" name="chekout-date" id="chekout-date" required>
-              <label for="adults">Взрослые:</label>
-              <input type="number" name="adults" id="adults" value="1" required>
-              <label for="children">Дети:</label>
-              <input type="number" name="children" id="children" value="0">
-              <button type="submit">Найти</button>
-            </form>
-          </div>
-        </div>
-      </section>
+            </p>
+            <label for="adults">Взрослые:</label>
+            <input type="number" name="adults" id="adults" value="1" required>
+          <label for="children">Дети:</label>
+          <input type="number" name="children" id="children" value="0">
+        </p>
+        <button class="blue-button" type="submit">Найти</button>
+      </form>
+      </div>
+    </div>
+  </div>
+</section>
+      </div>
     </main>
     <footer class="main-footer">
-      <a class="social-button"  href="#">
+      <a class="social-button" href="#">
         #VISITSEDONA
       </a>
       <div class="footer-social">
