Стилизация рейтинга и ссылок footer

--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,9 @@
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
+          <div class="rating">
           <p>рейтинг: 8.3</p>
+          </div>
           </li>
           <li class="desert">
           <h2>DESERT QUAIL INN</h2>
@@ -54,7 +56,9 @@
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
+          <div class="rating">
           <p>рейтинг: 8.9</p>
+          </div>
         </li>
         <li class="villas">
           <h2>VILLAS AT POCO DIABLO</h2>
@@ -69,7 +73,9 @@
           </div>
           <img src="img/star.svg" width="15" height="15" alt="rating">
           <img src="img/star.svg" width="15" height="15" alt="rating">
+          <div class="rating">
           <p>рейтинг: 9.2</p>
+          </div>  
         </li>
       </ul>
     </section>
