--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </main>
     <footer class="main-footer">
-      <a class="social-button" href="#">
+      <a class="visitsedona" href="#">
         #VISITSEDONA
       </a>
       <div class="footer-social">
@@ -135,9 +135,11 @@
       </div>
       <p class="developer-logo">
         <span>Website by</span> 
+        <div class="logo-html">
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy"></a>
         </p>
+      </div>
       </footer>
     </body>
     </html>
