--- a/catalog.html
+++ b/catalog.html
@@ -85,7 +85,7 @@
       #VISITSEDONA
     </a>
     <div class="footer-social">
-      <ul>
+        <ul class="social">
         <li>
           <a class="social-button" href="#">
             <img src="img/twitter.svg" alt="Твиттер">
