--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <h1 class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <div class="cause">
-      <span>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
+      <span class="reason">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
     </div>
     <div class="features">
       <div class="features__info">
@@ -64,13 +64,13 @@
         </li>
       </ul>
     </div>
-    <div class="features">
-      <div class="features__image">#nbsp;</div>
+    <div class="bridge">
+      <div class="bridge__image">#nbsp;</div>
       <!-- <img src="img/layer-5.jpg" width="800" height="256" alt="Там есть мост дьявола. Да, по нему можно пройтись! Если конечно вы осмелитесь."> -->
-      <div class="features__info">
-        <h3>Там есть мост дьявола</h3>
-        <p>- №2 -</p>
-        <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
+      <div class="bridge__info">
+        <h3 class="bridge__title">Там есть мост дьявола</h3>
+        <p class="bridge__number">- №2 -</p>
+        <p class="bridge__text">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
       </div>
     </div>
     <div class="services">
