--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         <p class="bridge__text">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
       </div>
     </div>
-    <div class="services">
-      <ul>
+    <div class="reasons">
+      <ul class="reasons__continued">
         <li class="feature-item-square">
-          <h3>Небольшая площадь</h3>
-          <p>Все достопримечательности находятся очень близко</p>
+          <h3 class="square">Небольшая площадь</h3>
+          <p class="attractions">Все достопримечательности находятся очень близко</p>
         </li>
         <li class="feature-item-road">
-          <h3>Красивая дорога</h3>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <h3 class="road">Красивая дорога</h3>
+          <p class="ride">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li class="feature-item-tourist">
-          <h3>Мало туристов</h3>
-          <p>Большинство едет в Гранд Каньон и толпится там</p>
+          <h3 class="tourist">Мало туристов</h3>
+          <p class="move">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul> 
     </div>
