Добавила классы. Разметила логотип академии в footer

--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
   </header>
   <main class="container">
     <section class="housing">
-      <ul>
+      <ul class="housing__catalog">
         <li class="amara">
           <h2>AMIRA RESORT & SPA</h2>
           <img src="img/index-amara.jpg" width="150" height="100" alt="amara">
