--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,8 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+
+  <!-- HEADER -->
   <header class="main-header">
     <a class="main-header-logo" href="index.html"><img src="img/logo-sedona.svg" width="150" height="100" alt="Логотип Седона»"></a>
     <nav class="main-navigation">
@@ -19,6 +21,8 @@
       </ul>
     </nav>
   </header>
+
+  <!-- CONTENT -->
   <main class="container">
     <section class="housing">
       <ul class="housing__catalog">
@@ -80,6 +84,8 @@
       </ul>
     </section>
   </main>
+
+  <!-- FOOTER -->
   <footer class="footer">
     <a href="#" class="visitsedona">
       #VISITSEDONA
@@ -103,6 +109,7 @@
         </li>
       </ul>
     </div>
+    
     <div class="developer">
         <span class="developer__text">Website by</span>
         <a class="developer__link" href="https://htmlacademy.ru/intensive/htmlcss">
