--- a/index.html
+++ b/index.html
@@ -55,23 +55,17 @@
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
         <li class="services-item">
-          <svg class="house__icon">
-            <!-- <use xlink:href="img/house.svg"></use> -->
-          </svg>
-          <h3>Жилье</h3>
+          <img src="img/house.svg" width="75" height="72">
+          <h3>Жильё</h3>
           <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
         <li class="services-item">
-          <svg class="burger__icon">
-            <!-- <use xlink:href="img/burger.svg"></use> -->
-          </svg>
+          <img src="img/burger.svg" width="75" height="72">
           <h3>Еда</h3>
-          <p>Всегда заказывайте фрменный бургер, вы не разочаруетсь!</p>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетсь!</p>
         </li>
         <li class="services-item">
-          <svg class="present__icon">
-            <!-- <use xlink:href="img/present.svg"></use> -->
-          </svg>
+          <img src="img/present.svg" width="75" height="72">
           <h3>Сувениры</h3>
           <p>Не только китайского, но и местного прозводства!</p>
         </li>
@@ -89,20 +83,20 @@
     </div>
     <div class="reasons">
       <ul class="reasons__continued">
-        <li class="reasons-item-square">
-          <h3 class="square__title">Небольшая площадь</h3>
-          <p class="square__number">- №3 -</p>
-          <p class="square__text">Все достопримечательности находятся очень близко</p>
+        <li class="feature-item">
+          <h3 class="feature-item__title">Небольшая площадь</h3>
+          <p class="feature-item__number">- №3 -</p>
+          <p class="feature-item__text">Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="feature-item-road">
-          <h3 class="road__title">Красивая дорога</h3>
-          <p class="square__number">- №4 -</p>
-          <p class="road__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        <li class="feature-item">
+          <h3 class="feature-item__title">Красивая дорога</h3>
+          <p class="feature-item__number">- №4 -</p>
+          <p class="feature-item__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="feature-item-tourist">
-          <h3 class="tourist__title">Мало туристов</h3>
-          <p class="tourist__number">- №5 -</p>
-          <p class="tourist__text">Большинство едет в Гранд Каньон и толпится там</p>
+        <li class="feature-item">
+          <h3 class="feature-item__title">Мало туристов</h3>
+          <p class="feature-item__number">- №5 -</p>
+          <p class="feature-item__text">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul> 
     </div>
@@ -122,11 +116,13 @@
         <div class="form-block">
           <label for="checkin-date">Дата заезда:</label>
           <input type="date" name="checkin-date" id="checkin-date" required>
+          <img src="img/calendar.svg" alt="Calendar" width="21" height="22">
         </div>
 
         <div class="form-block">
           <label for="chekout-date">Дата выезда:</label>
           <input type="date" name="chekout-date" id="chekout-date" required>
+          <img src="img/calendar.svg" alt="Calendar" width="21" height="22">
         </div>
 
         <div class="form-block-half">
