--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section>
 
     <div class="sedona">
-      <p class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <p class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="reason">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
     </div>
 
@@ -103,7 +103,7 @@
 
     <div class="interesting">
       <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <button class="search-button">Поиск гостиницы в Седоне</button>
     </div>
 
