Улучшение кода в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -86,19 +86,21 @@
     <section class="housing">
       <ul class="housing__catalog">
         <li class="housing__catalog__item">
-          <img class="housing__catalog__image" src="img/index-amara.jpg" width="150" height="100" alt="amara">
+          <img class="housing__catalog__image" src="img/index-amara.jpg" alt="amara">
           <div class="housing__catalog__info">
             <h2>AMARA RESORT & SPA</h2>
             <div class="info-block">
-              <p>Гостиница</p>
-              <div class="more">
-                <a>Подробнее</a>
+              <div class="info-text">
+                <p>Гостиница</p>
+                <div class="more">
+                  <a>Подробнее</a>
+                </div>
               </div>
-            </div>
-            <div class="info-block">
-              <p class="aligned-to-left">от 4000 р.</p>
-              <div class="booking">
-                <a>Забронировать</a>
+              <div class="book-text">
+                <p class="aligned-to-left">от 4000 р.</p>
+                <div class="booking">
+                  <a>Забронировать</a>
+                </div>
               </div>
             </div>
           </div>
@@ -121,15 +123,17 @@
           <div class="housing__catalog__info">
             <h2>DESERT QUAIL INN</h2>
             <div class="info-block">
-              <p>Мотель</p>
-              <div class="more">
-                <a>Подробнее</a>
+              <div class="info-text">
+                <p>Мотель</p>
+                <div class="more">
+                  <a>Подробнее</a>
+                </div>
               </div>
-            </div>
-            <div class="info-block">
-              <p class="aligned-to-left">от 3000 р.</p>
-              <div class="booking">
-                <a>Забронировать</a>
+              <div class="book-text">
+                <p class="aligned-to-left">от 3000 р.</p>
+                <div class="booking">
+                  <a>Забронировать</a>
+                </div>
               </div>
             </div>
           </div>
@@ -150,17 +154,19 @@
           <div class="housing__catalog__info">
             <h2>VILLAS AT POCO DIABLO</h2>
             <div class="info-block">
-              <p>Апартаменты</p>
-              <div class="more">
-                <a>Подробнее</a>
+              <div class="info-text">
+                <p>Апартаменты</p>
+                <div class="more">
+                  <a>Подробнее</a>
+                </div>
+              </div>
+              <div class="book-text">
+                <p class="aligned-to-left">от 2000 р.</p>
+                <div class="booking">
+                  <a>Забронировать</a>
+                </div>
               </div>
             </div>
-            <div class="info-block">
-              <p class="aligned-to-left">от 2000 р.</p>
-              <div class="booking">
-                <a>Забронировать</a>
-              </div>
-             </div>
             </div>
             <div class="housing__catalog__rating">
               <div class="star-block">
