--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
         <div class="form-block">
           <label class="form-label" for="checkin-date-">Дата заезда:</label>
           <input type="text" name="checkin-date" id="checkin-date" required value="24 апреля 2017">
-          <img src="img/calendar.svg" alt="Calendar" width="21" height="22">
+          <img src="img/calendar.svg" alt="Calendar">
         </div>
 
         <div class="form-block">
           <label class="form-label" for="chekout-date">Дата выезда:</label>
           <input type="text" name="chekout-date" id="chekout-date" required value="4 июля 2017">
-          <img src="img/calendar.svg" alt="Calendar" width="21" height="22">
+          <img src="img/calendar.svg" alt="Calendar">
         </div>
 
         <div class="quantity-block">
