--- a/index.html
+++ b/index.html
@@ -176,5 +176,14 @@
       </div>
 
   </footer>
+  <!-- <script>
+    var link = document.querySelector(".search-button");
+    var popup = document.querySelector(".modal-search");
+    link.addEventListener("click", function (evt) {
+      evt.preventDefault();
+      popup.classList.add("modal-show");
+    });
+
+  </script> -->
 </body>
 </html>
