Удалила не работающий скрипт

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="sedona">
       <p class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p class="reason">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <p class="reason">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</>
     </div>
 
     <div class="features">
@@ -112,7 +112,7 @@
     <div class="modal-search">
       <form action="https://echo.htmlacademy.ru/" method="POST">
         <div class="form-block">
-          <label class="form-label" for="checkin-date">Дата заезда:</label>
+          <label class="form-label" for="checkin-date-">Дата заезда:</label>
           <input type="text" name="checkin-date" id="checkin-date" required value="24 апреля 2017">
           <img src="img/calendar.svg" alt="Calendar">
         </div>
@@ -176,14 +176,5 @@
       </div>
 
   </footer>
-  <!-- <script>
-    var link = document.querySelector(".search-button");
-    var popup = document.querySelector(".modal-search");
-    link.addEventListener("click", function (evt) {
-      evt.preventDefault();
-      popup.classList.add("modal-show");
-    });
-
-  </script> -->
 </body>
 </html>
